<resources>
    <string name="app_name">Book Shelf</string>
    <string name="welcome">Welcome to my Book shelf</string>
    <string name="f1">First name</string>
    <string name="l1">Last name</string>
    <string name="e1">Email</string>
    <string name="p1">Password</string>
    <string name="bu1">Sign up</string>
    <string name="u1">Username</string>
    <string name="Book_Title">Book Title</string>
    <string name="Book_Author">Book Author</string>
    <string name="Page">Number of pages</string>
    <string name="Add">Add</string>
    <string name="user">Usernamer: </string>
    <string name="user_hint">Enter your Username</string>
    <string name="pass">Password: </string>
    <string name="pass_hint">Enter your Username</string>
    <string name="login">LOGIN</string>
    <string name="reg">Not Registered? Register now</string>
    <string name="signup">Sign up</string>
    <string name="title">Book Title</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="number">1</string>
    <string name="head_title">Title 1</string>
    <string name="author_title">Author1</string>
    <string name="num_page">120</string>
</resources>
