<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/book1"
    tools:context=".Register">




    <EditText
        android:id="@+id/f1_name"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="145dp"
        android:hint="@string/f1"
        android:background="@color/cardview_light_background"
        android:inputType="textCapWords" />
    <EditText
        android:id="@+id/l1_name"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:hint="@string/l1"
        android:background="@color/cardview_light_background"
        android:layout_marginTop="15dp"
        android:inputType="textCapWords" />
    <EditText
        android:id="@+id/u1_name"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@color/cardview_light_background"
        android:hint="@string/u1"
        />
    <EditText
        android:id="@+id/e1_name"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@color/cardview_light_background"
        android:hint="@string/e1"
        />
    <EditText
        android:id="@+id/p1_name"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@color/cardview_light_background"
        android:hint="@string/p1"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:background="#2C9189"
        android:hint="@string/bu1"

        />





</LinearLayout>